hphp/hack/test/typecheck/class_refinements/const-kind-mismatch.php.exp
File "const-kind-mismatch.php", line 10, characters 46-46:
`C` in `\Box` is not a `type`, did you mean `ctx`? (Typing[4471])
File "const-kind-mismatch.php", line 12, characters 45-45:
`T` in `\Box` is not a `ctx`, did you mean `type`? (Typing[4471])
